# ca-gnn

./: LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
src/ca_gnn/: __init__.py
tests/: test_import.py
